--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,72 +1,94 @@
-.nav-bar {
+.nav-bar{
   background-color: black;
 }
 
-/* .nav-pills .nav-link:not(.active) {
-    background-color: #b28dc0;
-    color: white;
-} */
-/*
-html {
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.nav-bar {
-  background-color: black;
-}
-
-body::after {
+body {
   content: "";
-  background: url("/img/records.jpeg");
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-  background-size: 100%;
-  background-repeat: no-repeat;
+  background: url('/img/records.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.card {
-  background-image: url("/img/records.jpeg");
-  background-color: rgba(245, 245, 245, 1);
+#card-fix {
+  /*background-image: url('/img/records.j');*/
+  background-color: #E6E6FA;
   text-align: center;
-  float: center;
+  float:center;
+  padding-right: 0;
+  margin-right: 0;
+  position:relative ;
+  left: 50%;
+  text-shadow: 5px 5px 5px 5px gray;
+  opacity: 1;
+}
+
+#card-fixed {
+  background-color: #E6E6FA;
+  text-align: center;
+  float:center;
+  padding-right: 0;
+  margin-right: 0;
+  position:relative ;
+  /*left: 50%;*/
+  text-shadow: 5px 5px 5px 5px gray;
+  opacity: 1;
+}
+
+#post-card {
+  /*background-image: url('/img/records.j');*/
+  background-color: #E6E6FA;
+  text-align: center;
+  float:center;
   padding-right: 0;
   margin-right: 0;
   position: relative;
-  left: 50%;
+  left: 110%;
   text-shadow: 5px 5px 5px 5px gray;
+  opacity: 1;
 }
 
-h4,
-label {
-  color: #ee82ee;
+h4, label {
+  color: black;
 }
+
+#your-post {
+  text-align: center;
+  padding-left: 16%;
+  size: 100%;
+  text-shadow: 10px #E6E6FA;
+}
+
 .btn {
   box-shadow: 0 3px 0 0 #007299;
-  color: #ee82ee !important;
+  color: #EE82EE !important;
 }
 
-.btn-primary,
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary:visited {
-  background-color: #8064a2 !important;
+input[type=text] {
+  background-color: #C0C0C0 !important;
 }
 
-input[type="text"] {
-  background-color: #c0c0c0 !important;
+input[type=password] {
+  background-color: #C0C0C0 !important;
 }
 
-input[type="password"] {
-  background-color: #c0c0c0 !important;
+div.card-body {
+  background-color: #C0C0C0;
 }
 
-/* .nav-pills .nav-link:not(.active) {
+base {
+  text-align: center;
+}
+
+#click {
+  text-align: center;
+}
+
+  /* .nav-pills .nav-link:not(.active) {
     background-color: #b28dc0;
     color: white;
 } */
+
+
+
